[package]
name = "mars_time_tgbot"
version = "0.1.0"
authors = ["BananaLoaf <bananaloaf@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.17"
chrono = "0.4"
carapax = "0.5.0"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
env_logger = "0.7.1"
